[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/Props/Prop.gd" type="Script" id=1]
[ext_resource path="res://Systems/RandomAudioPlayer.tscn" type="PackedScene" id=2]

[node name="Prop" type="RigidBody2D"]
collision_layer = 128
collision_mask = 136
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]

[node name="CollisionSFX" parent="." instance=ExtResource( 2 )]

[node name="MuteTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="sleeping_state_changed" from="." to="." method="_on_Prop_sleeping_state_changed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="MuteTimer" to="." method="_on_MuteTimer_timeout"]
